bug fix for example window on mobile

--- a/styles.css
+++ b/styles.css
@@ -123,7 +123,7 @@ a:hover, a:active, .linkish:hover, .linkish:active {
   border: solid 1px black;
   background-color: white;
   padding: 1em;
-  width: 90vh;
+  width: 100%;
   max-width: 600px;
   margin: auto;
   box-shadow: 5px 10px 8px rgba(0,0,0, .5);
@@ -182,6 +182,7 @@ footer p {
 
   #ex {
     position: fixed;
+
   }
 
 }
